--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -2,16 +2,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Rock Paper Scissors Lizard Spock - Written in Golang</title>
-	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/rpsls/css/style.css" />
 </head>
 
 <body>
 <div class="container">
 	<div class="logo">
-		<h1><a href="http://localhost:8080/">Rock Paper Scissors Lizard Spock - Written in Golang</a></h1>
+		<h1><a href="http://go.nikz.se/rpsls/">Rock Paper Scissors Lizard Spock - Written in Golang</a></h1>
 	</div>
 	<div class="content">
-		<form action="/new/{{.GameId}}" method="POST">
+		<form action="/rpsls/new/{{.GameId}}" method="POST">
 		<div style="text-align: center;"><input class="new" type="submit" value='Start new Game'></div>
 		</form>
 	</div>
